# DesignPatterns

./: README.md
Composite/: CMakeLists.txt  main.cpp
Composite/src/: CombatGroup.h  CombatUnit.h  Legionary.h  Maniple.h  Pretorian.h
Visitor/: CMakeLists.txt  Types.h  main.cpp
adapter/: CMakeLists.txt  Types.h  main.cpp
bridge/: CMakeLists.txt  Types.h  main.cpp
command/: CMakeLists.txt  Types.cpp  Types.h  main.cpp
composite/: CMakeLists.txt  Types.h  main.cpp
decorator/: CMakeLists.txt  Types.h  main.cpp
factory/: CMakeLists.txt  Types.h  main.cpp
observer/: CMakeLists.txt  Types.h  main.cpp
prototype/: CMakeLists.txt  Types.h  main.cpp
proxy/: CMakeLists.txt  Types.h  main.cpp
singleton/: CMakeLists.txt  Types.h  main.cpp
